[gd_scene load_steps=38 format=2]

[ext_resource path="res://scenes/player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/images/spade.png" type="Texture" id=2]
[ext_resource path="res://assets/images/player.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 128, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 192, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 128 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 64, 128 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 64, 128, 64, 128 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "wallride",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "dig",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "jump",
"speed": 3.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=12]
radius = 13.0
height = 16.0

[sub_resource type="RayShape2D" id=13]
length = 16.0

[sub_resource type="Animation" id=14]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/SpadePivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.75, -21.5 ), Vector2( 0.5, -7.25 ), Vector2( 0.5, -7.25 ), Vector2( 12.25, -21.5 ), Vector2( 12.25, -21.5 ), Vector2( -2.75, -21.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/SpadePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, -114.474, -114.474, 0.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "throw_dirt" ],
"method": "emit_signal"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "dig" ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/AnimatedSprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9.08681, -3.49517 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Pivot/AnimatedSprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.96046e-08, -26.5 ), Vector2( 5.96046e-08, -25 ), Vector2( -1.5, -27.5 ) ]
}

[sub_resource type="Animation" id=15]
length = 1.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/SpadePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -42.7527 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/SpadePivot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -13, -22 ), Vector2( -12.75, -18.75 ), Vector2( -13, -22 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/AnimatedSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Pivot/AnimatedSprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.75, -30.5 ) ]
}

[sub_resource type="Animation" id=16]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/SpadePivot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.4645, -32.1634 ), Vector2( -20.715, -32.9901 ), Vector2( -14.8166, -32.1879 ), Vector2( -18.4645, -32.1634 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/SpadePivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 27.761, 7.11502, 27.761 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jump" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/AnimatedSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.75, -30.5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/AnimatedSprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -5.70795, 6.95068, 0.0 ]
}

[sub_resource type="Animation" id=17]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "run" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.75, -30.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Pivot/SpadePivot:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -11.2145, -22.9134 ), Vector2( -0.7145, -24.4134 ), Vector2( -11.2145, -22.9134 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Pivot/SpadePivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -46.8196, -86.1546, -46.8196 ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "wallride" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 10.43, 7.65783, 10.43 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Pivot/AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.75, -30.5 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "dig"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "move"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "wallriding"

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
advance_condition = "moving"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
advance_condition = "not_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
advance_condition = "grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]
advance_condition = "not_grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id=30]
advance_condition = "not_grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id=31]
advance_condition = "wallriding"

[sub_resource type="AnimationNodeStateMachineTransition" id=32]
advance_condition = "not_wallriding"

[sub_resource type="AnimationNodeStateMachine" id=33]
states/dig/node = SubResource( 19 )
states/dig/position = Vector2( 594, 81 )
states/idle/node = SubResource( 20 )
states/idle/position = Vector2( 231, 81 )
states/jump/node = SubResource( 21 )
states/jump/position = Vector2( 594, 198 )
states/move/node = SubResource( 22 )
states/move/position = Vector2( 231, 198 )
states/wallriding/node = SubResource( 23 )
states/wallriding/position = Vector2( 779, 141 )
transitions = [ "idle", "dig", SubResource( 24 ), "dig", "idle", SubResource( 25 ), "idle", "move", SubResource( 26 ), "move", "idle", SubResource( 27 ), "jump", "idle", SubResource( 28 ), "idle", "jump", SubResource( 29 ), "move", "jump", SubResource( 30 ), "jump", "wallriding", SubResource( 31 ), "wallriding", "jump", SubResource( 32 ) ]
start_node = "idle"
graph_offset = Vector2( 123, 51 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=34]

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 1 )

[node name="Pivot" type="Node2D" parent="."]

[node name="Dirt" type="Position2D" parent="Pivot"]
position = Vector2( 5, -32 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Pivot"]
modulate = Color( 0.0823529, 0.231373, 0.54902, 1 )
position = Vector2( -0.75, -30.5 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 11 )
animation = "idle"
frame = 1
playing = true

[node name="SpadePivot" type="Node2D" parent="Pivot"]
position = Vector2( -12.9195, -20.9529 )
rotation = -0.746176
__meta__ = {
"_edit_group_": true
}

[node name="spade" type="Sprite" parent="Pivot/SpadePivot"]
position = Vector2( 2.25, 7.25 )
rotation = 2.87979
texture = ExtResource( 2 )

[node name="Wall" type="RayCast2D" parent="Pivot"]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 16, 0 )
collision_mask = 2

[node name="Capsule" type="CollisionShape2D" parent="."]
position = Vector2( 0, -34 )
shape = SubResource( 12 )

[node name="Base" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 13 )
one_way_collision_margin = 3.0

[node name="FloorL" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="FloorM" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="FloorR" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 2

[node name="MapReach" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
exclude_parent = false
cast_to = Vector2( -80, 0 )
collision_mask = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dig = SubResource( 14 )
anims/idle = SubResource( 15 )
anims/jump = SubResource( 16 )
anims/move = SubResource( 17 )
anims/wallriding = SubResource( 18 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 33 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 34 )
parameters/conditions/grounded = false
parameters/conditions/moving = false
parameters/conditions/not_grounded = false
parameters/conditions/not_moving = false
parameters/conditions/not_wallriding = false
parameters/conditions/wallriding = false

[node name="Tools" type="Node" parent="."]
